== Change Log

=== Edge

* Update Cucumber and RSpec, clean up some features and fix specs. [Sean Cribbs]
* Set the protected attributes for users in User.protected_attributes 
[Jim Gay]
* Don't allow a nil ETag in SiteController. [David Cato]
* Prevent failed login message from sticking around. [Kunal Shah]
* Fix failing test regarding extension order. [Brett McHargue]
* Catch ActiveRecord::RecordNotFound in Admin::ResourceController
[Jim Gay]
* Catch missing template errors for show routes [Jim Gay]
* Fix with_error in render_matcher not causing the spec to fail when no exception raised. [Jason Garber]

=== 0.8.0 RC1

* Make features task run in instance mode. [Sean Cribbs]
* Remove Admin::AbstractModelController. [Sean Cribbs]
* Cleanup deprecated Gem::manage_gems. [Sean Cribbs]
* Add begin...rescue blocks to rspec.rake [Sean Cribbs]
* Add begin...rescue blocks for requiring cucumber. [Matt Henry]
* Deprecate ResponseCache, add Radiant::Cache based on Rack::Cache.
[Sean Cribbs]
* Use app name for session cookie. [Josh French]
* Upgrade to Rails 2.3.2. [Sean Cribbs, Rick DeNatale, Josh French,
Kunal Shah]
* Populate config.extensions so extensions can be disabled easily.
[Jason Garber]
* Convert integration specs to Cucumber stories and update RSpec. [Sean
Cribbs]
* Use ActionView::PathSet instead of normal arrays for view paths. [Pat
Allan]
* Don't raise exception on unauthenticated request to /admin/logout.
[Josh French]
* Reverse view paths order in extension loader. [Sean Cribbs, Brent
Kroeker]
* Remove obviated Ruby 1.8.7 compatibility patch. [Sean Cribbs]
* Adjust StandardTags#relative_url_for for case when relative_url_root
is nil. [Sean Cribbs]
* Correct rendering error in extensions controller. [Sean Cribbs]
* Correct typo in config/boot.rb. [Sean Cribbs]
* Major refactoring and simplification of LoginSystem. [Sean Cribbs]
* Update Haml to 2.0.7. [Sean Cribbs]
* Upgrade to Rails 2.2.2. [Sean Cribbs]